--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js test-img"
+    "start": "node src/index.js test-img",
+    "convert:webp": "node src/index.js test-img --webp",
+    "convert:avif": "node src/index.js test-img --avif"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "canvas": "^3.1.0",
     "globby": "^14.1.0",
     "sharp": "^0.34.2"
   }
