--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js test-img",
-    "convert:webp": "node src/index.js test-img --webp",
+    "convert:webp": "node src/index.js test-img source-files --webp",
     "convert:avif": "node src/index.js test-img --avif"
   },
   "keywords": [],
