--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "min-image-cli",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node source-files/nested-folder/index",
     "convert:webp": "node src/index.js src/test-img source-files --webp",
-    "convert:avif": "node src/index.js test-img --avif"
+    "convert:avif": "node src/index.js test-img --avif",
+    "release": "standard-version"
   },
   "bin": {
     "mini-image": "./src/index.js"
@@ -18,6 +19,7 @@
   "description": "",
   "dependencies": {
     "globby": "^14.1.0",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "standard-version": "^9.5.0"
   }
 }
