--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "min-image-cli",
-  "version": "1.1.0",
+  "name": "mini-image-cli",
+  "version": "1.1.1",
   "main": "index.js",
   "type": "module",
   "scripts": {
